// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineList does not render if items are null 1`] = `""`;

exports[`InlineList renders item without separator 1`] = `
<div
  className="__InlineList__"
>
  <ul
    className={null}
  >
    <li
      key="foo"
    >
      <span>
        foo
      </span>
    </li>
    <li
      key="bar"
    >
      <span>
        bar
      </span>
    </li>
  </ul>
</div>
`;

exports[`InlineList renders items seperated by default 1`] = `
<div
  className="__InlineList__"
>
  <ul
    className="separate-items"
  >
    <li
      key="foo"
    >
      <span>
        foo
      </span>
    </li>
    <li
      key="bar"
    >
      <span>
        bar
      </span>
    </li>
  </ul>
</div>
`;

exports[`InlineList renders with all props set 1`] = `
<div
  className="__InlineList__"
>
  <span>
    Test
    : 
  </span>
  <ul
    className="separate-items"
  >
    <li
      key="1"
    >
      <span>
        foo
      </span>
    </li>
    <li
      key="2"
    >
      <span>
        bar
      </span>
    </li>
  </ul>
  <span>
    Suffix
  </span>
</div>
`;

exports[`InlineList renders with all props set 2`] = `
<div
  className="__InlineList__"
>
  <span>
    Test
    : 
  </span>
  <ul
    className="separate-items"
  >
    <li
      key="1"
    >
      <span>
        foo
      </span>
    </li>
    <li
      key="2"
    >
      <span>
        bar
      </span>
    </li>
  </ul>
  <span>
    Suffix
  </span>
</div>
`;
